--- a/templates/post.html
+++ b/templates/post.html
@@ -11,19 +11,16 @@
         <div class="top">
             <div class="title"><h1>My Blog</h1></div>
         </div>
-    
-        {% for post in all_posts: %}
         <div class="content">
-            <div class="card ">
-                <h2>{{ post.title }}</h2>
-                <p>{{ post.subtitle }}</p>
-                <a href="{{ url_for('get_post', post_id=post.id) }}">Read</a>
+            <div class="card">
+                <h1> {{ post.title }}</h1>
+                <h2> {{ post.subtitle }}</h2>
+                <p> {{ post.body }}</p>
             </div>
-    
         </div>
-        {% endfor %}
+    </div>
 </body>
 <footer>
-    <p>Copyright @{{ cur_year }}. Built by {{ my_name }}. </p>
+    <p> Built by Suzana.</p>
 </footer>
 </html>
