upgraded using Bootstrap

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,29 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway" rel="stylesheet">
-    <link rel="stylesheet" href="../static/css/styles.css">
-</head>
-<body>
-    <div class="wrapper">
-        <div class="top">
-            <div class="title"><h1>My Blog</h1></div>
-        </div>
-    
-        {% for post in all_posts: %}
-        <div class="content">
-            <div class="card ">
-                <h2>{{ post.title }}</h2>
-                <p>{{ post.subtitle }}</p>
-                <a href="{{ url_for('get_post', post_id=post.id) }}">Read</a>
+{% include "header.html" %}
+
+        <!-- Page Header-->
+<!--        <header class="masthead" style="background-image: url({{ url_for('static', filename='assets/img/home-bg.jpg') }})">-->
+        <header class="masthead" style="background-image: url('static/assets/img/unsplash-img-1.jpg')">
+            <div class="container position-relative px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-md-10 col-lg-8 col-xl-7">
+                        <div class="site-heading">
+                            <h1>Suzana's Blog</h1>
+                            <span class="subheading">A Blog Theme by Start Bootstrap</span>
+                        </div>
+                    </div>
+                </div>
             </div>
-    
+        </header>
+        <!-- Main Content-->
+        <div class="container px-4 px-lg-5">
+            <div class="row gx-4 gx-lg-5 justify-content-center">
+                <div class="col-md-10 col-lg-8 col-xl-7">
+
+                    <!-- Post preview-->
+                    {% for post in all_posts %}
+                    <div class="post-preview">
+                        <a href="{{ url_for('get_post', post_id=post.id) }}">
+                            <h2 class="post-title">{{ post.title }}</h2>
+                            <h3 class="post-subtitle">{{ post.subtitle }}</h3>
+                        </a>   
+                        <p class="post-meta">
+                            Posted by
+                            <a href="#!">{{ post.author }}</a>
+                            on {{ post.date }}
+                        </p>
+                    </div>
+                    <!-- Divider-->
+                    <hr class="my-4" />
+                    {% endfor %}
+
+                    <!-- Pager-->
+                    <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a></div>
+                </div>
+            </div>
         </div>
-        {% endfor %}
-</body>
-<footer>
-    <p>Copyright @{{ cur_year }}. Built by {{ my_name }}. </p>
-</footer>
-</html>
+
+{% include "footer.html" %}
